# github-stats

./: .prettierignore  CHANGELOG.md  Justfile  README.md  TEST_PLAN.md  lefthook.yml  linkinator.config.json  results.sarif  sonar-project.properties
.github/: dependabot.yml
10_downgrade_markdown_link_checker/: action.json  report.json
11_pyproject_checks/: action.json  report.json
12_upgrade_markdown_link_checker/: action.json  report.json
13_schedule_code_checks/: action.json  report.json
14_refactor_github_actions/: action.json  report.json
15_clear_caches/: action.json  report.json
16_codeql_config/: action.json  report.json
17_dependency_review/: action.json  report.json
18_daily_updates/: action.json  report.json
19_superlinter_permissions/: action.json  report.json
20_markdown_link_checker/: action.json  report.json
21_update_editorconfig_checker/: action.json  report.json
22_codeql_cron/: action.json  report.json
23_dependabot_groups/: action.json  report.json
24_remove_pinact_config/: action.json  report.json
tests/: .gitignore  action.json  pyproject.toml  report.json  tests.just
tests/end_to_end/: test_homepage.py  test_sitemap.py
tests/end_to_end/features/: web_manifest.feature
tests/end_to_end/steps/: test_sitemap.py  test_web_manifest.py
tests/end_to_end/utils/: variables.py
tests/features/: sitemap.feature
tests/ui/: test_homepage.py  test_repositories.py  test_robots.py  test_sidebar.py  test_sitemap.py  test_summary.py  test_website.py
tests/ui/data/: expected_robots.txt
tests/ui/utils/: variables.py
(+657 files in other folders)
