[project]
name = "tests"
version = "1.0.0"
requires-python = ">=3.13"
dependencies = [
  "requests==2.32.3",
  "pytest==8.3.4",
  "pytest-bdd==8.1.0",
  "defusedxml==0.7.1",
  "selenium==4.27.1",
]

[project.optional-dependencies]
dev = ["ruff==0.9.2", "zizmor==1.2.2"]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]

ignore = [
  "COM812",  # Ignore due to conflict with Ruff formatter
  "ISC001",  # Ignore due to conflict with Ruff formatter
  "PLR2004", # Ignore magic value
  "D104",    # Ignore missing docstring in public package
  "D100",    # Ignore missing docstring in public module
  "T201",    # Ignore print statement (until we have a logger)
  "S101",    # Ignore asserts
  "F811",    # Ignore redefinition of function
  "G004",    # Ignore logging format string
]

fixable = ["ALL"]
unfixable = []

exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
]

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"**test_*.py" = ["S101", "D102", "D103", "SLF001", "PT019"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["tests", "utils"]
